Fix anchors in README

--- a/README.html
+++ b/README.html
@@ -1,9 +1,9 @@
 <!-- Converted from README.md - DONT EDIT MANUALLY -->
 <ol>
-<li><a href="#documentation">Documentation</a></li>
-<li><a href="#linux-support">Linux Support</a></li>
-<li><a href="#windows-support">Windows Support</a></li>
-<li><a href="#contributing">Contributing</a></li>
+<li><a href="#user-content-documentation">Documentation</a></li>
+<li><a href="#user-content-linux-support">Linux Support</a></li>
+<li><a href="#user-content-windows-support">Windows Support</a></li>
+<li><a href="#user-content-contributing">Contributing</a></li>
 </ol>
 <h2>
 <a id="user-content-documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h2>
