Improve table style

--- a/README.html
+++ b/README.html
@@ -1,4 +1,6 @@
 <!-- Converted from README.md - DONT EDIT MANUALLY -->
+<!--<link rel="stylesheet" href="res/style.css"/>-->
+<div class="markdown-body">
 <ol>
 <li><a href="#user-content-documentation">Documentation</a></li>
 <li><a href="#user-content-linux-support">Linux Support</a></li>
@@ -284,3 +286,4 @@ available version for that release from the table below.</p>
 <li><a href="https://github.com/icinga/icinga2">Icinga 2</a></li>
 <li><a href="https://github.com/icinga/icingaweb2">Icinga Web 2</a></li>
 </ul>
+</div>
