epel: Fix double yum install

--- a/epel/README.html
+++ b/epel/README.html
@@ -14,7 +14,7 @@
 <code>yum install epel-release</code>
 
 <p>Icinga Web 2 will also require PHP via the SCL repository system:</p>
-<code>yum install yum install centos-release-scl</code>
+<code>yum install centos-release-scl</code>
 
 <h3>RedHat 6 / 7 and compatible</h3>
 <pre>yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm
