--- a/SUSE/README.html
+++ b/SUSE/README.html
@@ -1,29 +1,23 @@
-<div id="readme">
-<h1><a href="http://www.suse.com"><img src="/res/SUSE-logo.png" alt="SUSE"></a>Enterprise Linux</h1>
+<h1><a href="https://www.suse.com"><img src="/res/SUSE-logo.png" alt="SUSE"></a>Enterprise Linux</h1>
 
 <h2>Archive Key</h2>
-<p style="font-size: 0.8em;"><code>
-rpm --import http://packages.icinga.com/icinga.key</code></p>
-</p>
+<pre>rpm --import https://packages.icinga.com/icinga.key</pre>
 
 <h2>Release Builds</h2>
 
-<p style="font-size: 0.8em;"><code>
-zypper ar http://packages.icinga.com/SUSE/ICINGA-release.repo<br/>
+<pre>
+zypper ar https://packages.icinga.com/SUSE/ICINGA-release.repo
 zypper ref
-</code></p>
-</p>
+</pre>
 
 <h2>Snapshot Builds</h2>
 
-<p style="font-weight: bold; color: red;">
+<p class="warning">
 WARNING: These are auto-built packages, based on current development trees.<br/>
 Made only for testing purposes, you should not use them in production environments!
 </p>
 
-<p style="font-size: 0.8em;"><code>
-zypper ar http://packages.icinga.com/SUSE/ICINGA-snapshot.repo<br/>
+<pre>
+zypper ar https://packages.icinga.com/SUSE/ICINGA-snapshot.repo
 zypper ref
-</code></p>
-</p>
-</div>
+</pre>
