--- a/README.html
+++ b/README.html
@@ -114,7 +114,7 @@ to latest version on this platform. Consider updating your OS release.</p>
 <td><em>latest</em></td>
 <td><em>latest</em></td>
 <td>7.0 [<a href="https://mirrors.n-ix.net/fedora/linux/releases/25/Server/source/tree/Packages/p/" rel="nofollow">18</a>]</td>
-<td>1m after 27 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
+<td>2017-12 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
 </tr>
 <tr>
 <td>Fedora</td>
