Update README for Fedora 27

--- a/README.html
+++ b/README.html
@@ -125,6 +125,14 @@ to latest version on this platform. Consider updating your OS release.</p>
 <td>1m after 28 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
 </tr>
 <tr>
+<td>Fedora</td>
+<td>27</td>
+<td><em>latest</em></td>
+<td><em>latest</em></td>
+<td>7.1 [<a href="https://mirrors.n-ix.net/fedora/linux/releases/26/Server/source/tree/Packages/p/" rel="nofollow">19</a>]</td>
+<td>1m after 29 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
+</tr>
+<tr>
 <td>SUSE SLE</td>
 <td>11.4</td>
 <td><em>latest</em></td>
@@ -243,28 +251,6 @@ available version for that release from the table below.</p>
 <td>2.6.3</td>
 <td>2.4.1</td>
 <td>2017-05 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
-</tr>
-</tbody>
-</table>
-<h3>
-<a id="user-content-upcoming-releases" class="anchor" href="#upcoming-releases" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Upcoming Releases</h3>
-<table>
-<thead>
-<tr>
-<th>OS</th>
-<th>Version</th>
-<th>Icinga 2</th>
-<th>Icinga Web 2</th>
-<th>OS Support</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Fedora</td>
-<td>27</td>
-<td>TODO</td>
-<td>TODO</td>
-<td>1m after 29 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
 </tr>
 </tbody>
 </table>
