Fix to be defined

--- a/README.html
+++ b/README.html
@@ -154,7 +154,7 @@ to latest version on this platform. Consider updating your OS release.</p>
 <td><em>latest</em></td>
 <td><em>latest</em></td>
 <td>7.0/5.5 * [<a href="https://www.suse.com/de-de/products/server/features/modules/#TODO" rel="nofollow">22</a>]</td>
-<td>TDB [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
+<td>TBD [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
 </tr>
 <tr>
 <td>openSUSE</td>
