fedora: Add 27 release RPM link

--- a/fedora/README.html
+++ b/fedora/README.html
@@ -1,6 +1,12 @@
 <h1><a href="http://www.fedoraproject.org"><img src="../res/fedora-logo.png" alt="Fedora"></a></h1>
 <h2>Release Builds</h2>
 
+Fedora 27:
+<pre>
+dnf install https://packages.icinga.com/fedora/icinga-rpm-release-27-latest.noarch.rpm
+</pre>
+</p>
+
 Fedora 26:
 <pre>
 dnf install https://packages.icinga.com/fedora/icinga-rpm-release-26-latest.noarch.rpm
