--- a/ubuntu/README.html
+++ b/ubuntu/README.html
@@ -35,6 +35,16 @@ deb http://packages.icinga.com/ubuntu icinga-trusty main
 deb-src http://packages.icinga.com/ubuntu icinga-trusty main
 </pre>
 
+<p> Or if you are a lazy one:</p>
+
+<pre>
+. /etc/os-release; if [ ! -z ${UBUNTU_CODENAME+x} ]; then DIST="${UBUNTU_CODENAME}"; else DIST="$(lsb_release -c| awk '{print $2}')"; fi; \
+ echo "deb http://packages.icinga.com/ubuntu icinga-${DIST} main" > \
+ /etc/apt/sources.list.d/${DIST}-icinga.list
+ echo "deb-src http://packages.icinga.com/ubuntu icinga-${DIST} main" >> \
+ /etc/apt/sources.list.d/${DIST}-icinga.list
+</pre>
+
 <h2>Snapshot Builds</h2>
 
 <p class="warning">
@@ -67,4 +77,14 @@ deb-src http://packages.icinga.com/ubuntu icinga-xenial-snapshots main
 <pre>
 deb http://packages.icinga.com/ubuntu icinga-trusty-snapshots main
 deb-src http://packages.icinga.com/ubuntu icinga-trusty-snapshots main
+</pre>
+
+<p> Or if you are a lazy one:</p>
+
+<pre>
+. /etc/os-release; if [ ! -z ${UBUNTU_CODENAME+x} ]; then DIST="${UBUNTU_CODENAME}"; else DIST="$(lsb_release -c| awk '{print $2}')"; fi; \
+ echo "deb http://packages.icinga.com/ubuntu icinga-${DIST}-snapshots main" > \
+ /etc/apt/sources.list.d/${DIST}-icinga-snapshots.list
+ echo "deb-src http://packages.icinga.com/ubuntu icinga-${DIST}-snapshots main" >> \
+ /etc/apt/sources.list.d/${DIST}-icinga-snapshots.list
 </pre>
