Move SLES 12.2 to out of support

--- a/README.html
+++ b/README.html
@@ -126,19 +126,11 @@ to latest version on this platform. Consider updating your OS release.</p>
 </tr>
 <tr>
 <td>SUSE SLE</td>
-<td>12.2</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0/5.5 * [<a href="https://www.suse.com/de-de/products/server/features/modules/#TODO" rel="nofollow">22</a>]</td>
-<td>2018-03 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
-</tr>
-<tr>
-<td>SUSE SLE</td>
 <td>12.3</td>
 <td><em>latest</em></td>
 <td><em>latest</em></td>
 <td>7.0/5.5 * [<a href="https://www.suse.com/de-de/products/server/features/modules/#TODO" rel="nofollow">22</a>]</td>
-<td>TBD [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
+<td>6 months after 12.4 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
 </tr>
 <tr>
 <td>openSUSE</td>
@@ -249,6 +241,13 @@ available version for that release from the table below.</p>
 <td>2.6.3</td>
 <td>2.4.1</td>
 <td>2017-05 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
+</tr>
+<tr>
+<td>SUSE SLE</td>
+<td>12.2</td>
+<td>2.8.2</td>
+<td>2.5.1</td>
+<td>2018-03 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
 </tr>
 </tbody>
 </table>
