ubuntu: Document 18.04 bionic beaver

--- a/README.html
+++ b/README.html
@@ -89,7 +89,7 @@ to latest version on this platform. Consider updating your OS release.</p>
 <td>16.04 xenial</td>
 <td><em>latest</em></td>
 <td><em>latest</em></td>
-<td>7.0 [[16]]</td>
+<td>7.0 [<a href="https://launchpad.net/ubuntu/+source/php7.0" rel="nofollow">16</a>]</td>
 <td>2021-03 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
 </tr>
 <tr>
@@ -98,6 +98,14 @@ to latest version on this platform. Consider updating your OS release.</p>
 <td><em>latest</em></td>
 <td><em>latest</em></td>
 <td>7.1 [<a href="https://launchpad.net/ubuntu/+source/php7.1" rel="nofollow">17</a>]</td>
+<td>2018-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
+</tr>
+<tr>
+<td>Ubuntu</td>
+<td>18.04 bionic</td>
+<td><em>latest</em></td>
+<td><em>latest</em></td>
+<td>7.2 [<a href="https://launchpad.net/ubuntu/+source/php7.2" rel="nofollow">18</a>]</td>
 <td>2018-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
 </tr>
 <tr>
