--- a/ubuntu/README.html
+++ b/ubuntu/README.html
@@ -8,13 +8,13 @@ curl https://packages.icinga.com/icinga.key | apt-key add -
 
 <h2>Release Builds</h2>
 
-<p><strong>icinga-zesty</strong>
-<a href="dists/icinga-zesty/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-zesty/main/binary-amd64/Packages">amd64</a>
+<p><strong>icinga-bionic</strong>
+<a href="dists/icinga-bionic/main/binary-i386/Packages">i386</a>
+<a href="dists/icinga-bionic/main/binary-amd64/Packages">amd64</a>
 </p>
 <pre>
-deb http://packages.icinga.com/ubuntu icinga-zesty main
-deb-src http://packages.icinga.com/ubuntu icinga-zesty main
+deb http://packages.icinga.com/ubuntu icinga-bionic main
+deb-src http://packages.icinga.com/ubuntu icinga-bionic main
 </pre>
 
 <p><strong>icinga-xenial</strong>
@@ -52,13 +52,13 @@ These are snapshot builds which are not suitable for production use. If you're s
 please use the release packages instead.
 </p>
 
-<p><strong>icinga-zesty-snapshots</strong>
-<a href="dists/icinga-zesty-snapshots/main/binary-i386/Packages">i386</a>
-<a href="dists/icinga-zesty-snapshots/main/binary-amd64/Packages">amd64</a>
+<p><strong>icinga-bionic-snapshots</strong>
+<a href="dists/icinga-bionic-snapshots/main/binary-i386/Packages">i386</a>
+<a href="dists/icinga-bionic-snapshots/main/binary-amd64/Packages">amd64</a>
 </p>
 <pre>
-deb http://packages.icinga.com/ubuntu icinga-zesty-snapshots main
-deb-src http://packages.icinga.com/ubuntu icinga-zesty-snapshots main
+deb http://packages.icinga.com/ubuntu icinga-bionic-snapshots main
+deb-src http://packages.icinga.com/ubuntu icinga-bionic-snapshots main
 </pre>
 
 <p><strong>icinga-xenial-snapshots</strong>
