Update support matrix to use icinga.com/support
fixes #7

--- a/README.html
+++ b/README.html
@@ -3,276 +3,27 @@
 <div class="markdown-body">
 <ol>
 <li><a href="#user-content-documentation">Documentation</a></li>
-<li><a href="#user-content-linux-support">Linux Support</a></li>
-<li><a href="#user-content-windows-support">Windows Support</a></li>
+<li><a href="#user-content-linux-support">Supported Platforms</a></li>
 <li><a href="#user-content-contributing">Contributing</a></li>
 </ol>
 <h2>
 <a id="user-content-documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h2>
-<p>Some distribution have special requirements for our Icinga packages, see the OS
-directories above for details.</p>
-<p>Please make sure to check the <a href="https://www.icinga.com/docs/" rel="nofollow">Icinga Documentation</a> for the product you want to use:</p>
+<p>Please check the <a href="https://www.icinga.com/docs/" rel="nofollow">Icinga Documentation</a> for installation requirements
+and package setup instructions:</p>
 <ul>
 <li><a href="https://www.icinga.com/docs/icinga2/latest" rel="nofollow">Icinga 2</a></li>
 <li><a href="https://www.icinga.com/docs/icingaweb2/latest" rel="nofollow">Icinga Web 2</a></li>
 </ul>
 <h2>
-<a id="user-content-linux-support" class="anchor" href="#linux-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux Support</h2>
-<p>Icinga tries to support a lot of Linux distributions in order for you
-to use Icinga where you want.</p>
-<p>Check the matrix below about what distributions are supported with
-which Icinga version.</p>
-<p>If a concrete version number is mentioned, this means that the product won't be updated
-to latest version on this platform. Consider updating your OS release.</p>
-<table>
-<thead>
-<tr>
-<th>OS</th>
-<th>Version</th>
-<th>Core 2</th>
-<th>Web 2</th>
-<th>PHP</th>
-<th>OS Support</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>EPEL</td>
-<td>6</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0-SCL [<a href="http://mirror.centos.org/centos/6/sclo/x86_64/rh/rh-php70/" rel="nofollow">9</a>] / 5.3 [<a href="http://mirror.centos.org/centos/6/os/x86_64/Packages/" rel="nofollow">11</a>]</td>
-<td>2020-11 [<a href="https://access.redhat.com/support/policy/updates/errata#Life_Cycle_Dates" rel="nofollow">1</a>]</td>
-</tr>
-<tr>
-<td>EPEL</td>
-<td>7</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.1-SCL [<a href="http://mirror.centos.org/centos/7/sclo/x86_64/rh/rh-php71/" rel="nofollow">10</a>] / 5.4 [<a href="http://mirror.centos.org/centos/7/os/x86_64/Packages/" rel="nofollow">12</a>]</td>
-<td>2024-06 [<a href="https://access.redhat.com/support/policy/updates/errata#Life_Cycle_Dates" rel="nofollow">1</a>]</td>
-</tr>
-<tr>
-<td>Debian</td>
-<td>7 wheezy</td>
-<td><em>latest</em></td>
-<td>2.4.2</td>
-<td>5.4 [<a href="https://tracker.debian.org/pkg/php5" rel="nofollow">13</a>]</td>
-<td>2018-05 [<a href="https://wiki.debian.org/LTS" rel="nofollow">2</a>]</td>
-</tr>
-<tr>
-<td>Debian</td>
-<td>8 jessie</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>5.6 [<a href="https://tracker.debian.org/pkg/php5" rel="nofollow">13</a>]</td>
-<td>2020-04 [<a href="https://wiki.debian.org/LTS" rel="nofollow">2</a>]</td>
-</tr>
-<tr>
-<td>Debian</td>
-<td>9 stretch</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0 [<a href="https://tracker.debian.org/pkg/php7.0" rel="nofollow">14</a>]</td>
-<td>2022-06 [<a href="https://wiki.debian.org/LTS" rel="nofollow">2</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>14.04 trusty</td>
-<td><em>latest</em></td>
-<td>2.4.2</td>
-<td>5.5 [<a href="https://launchpad.net/ubuntu/+source/php5" rel="nofollow">15</a>]</td>
-<td>2019-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>16.04 xenial</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0 [<a href="https://launchpad.net/ubuntu/+source/php7.0" rel="nofollow">16</a>]</td>
-<td>2021-03 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>17.10 artful</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.1 [<a href="https://launchpad.net/ubuntu/+source/php7.1" rel="nofollow">17</a>]</td>
-<td>2018-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>18.04 bionic</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.2 [<a href="https://launchpad.net/ubuntu/+source/php7.2" rel="nofollow">18</a>]</td>
-<td>2018-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Fedora</td>
-<td>26</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.1 [<a href="https://mirrors.n-ix.net/fedora/linux/releases/26/Server/source/tree/Packages/p/" rel="nofollow">19</a>]</td>
-<td>1m after 28 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
-</tr>
-<tr>
-<td>Fedora</td>
-<td>27</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.1 [<a href="https://mirrors.n-ix.net/fedora/linux/releases/26/Server/source/tree/Packages/p/" rel="nofollow">19</a>]</td>
-<td>1m after 29 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
-</tr>
-<tr>
-<td>SUSE SLE</td>
-<td>11.4</td>
-<td><em>latest</em></td>
-<td>2.4.2</td>
-<td>5.2 [<a href="https://www.suse.com/LinuxPackages/packageRouter.jsp?product=server&amp;version=11&amp;service_pack=sp2&amp;architecture=x86_64&amp;package_name=php5" rel="nofollow">20</a>]</td>
-<td>2019-03 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
-</tr>
-<tr>
-<td>SUSE SLE</td>
-<td>12.3</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0/5.5 * [<a href="https://www.suse.com/de-de/products/server/features/modules/#TODO" rel="nofollow">22</a>]</td>
-<td>6 months after 12.4 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
-</tr>
-<tr>
-<td>openSUSE</td>
-<td>42.2</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0/5.5 [<a href="https://software.opensuse.org/package/php7" rel="nofollow">21</a>]</td>
-<td>2018-01 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
-</tr>
-<tr>
-<td>openSUSE</td>
-<td>42.3</td>
-<td><em>latest</em></td>
-<td><em>latest</em></td>
-<td>7.0/5.5 [<a href="https://software.opensuse.org/package/php7" rel="nofollow">21</a>]</td>
-<td>2019-01 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
-</tr>
-</tbody>
-</table>
-<ul>
-<li>EPEL: RedHat Enterprise / CentOS (and derivatives) + EPEL repository enabled</li>
-<li>OS Support End is for the target distribution (and regular LTS)
-(payed additional update support is excluded)</li>
-<li>Icinga Support cycle might not be the same as the distribution itself</li>
-<li>PHP on SUSE SLE 12 needs a special add-on module "Web and Scripting Module"</li>
-</ul>
-<h3>
-<a id="user-content-out-of-support" class="anchor" href="#out-of-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Out of support</h3>
-<p>The following releases are out of our support, please check the last
-available version for that release from the table below.</p>
-<table>
-<thead>
-<tr>
-<th>OS</th>
-<th>Version</th>
-<th>Icinga 2</th>
-<th>Icinga Web 2</th>
-<th>OS Support</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>EPEL</td>
-<td>5</td>
-<td>2.6.3</td>
-<td>-</td>
-<td>2017-03 [<a href="https://access.redhat.com/support/policy/updates/errata#Life_Cycle_Dates" rel="nofollow">1</a>]</td>
-</tr>
-<tr>
-<td>Debian</td>
-<td>6 squeeze</td>
-<td>2.4.1</td>
-<td>-</td>
-<td>2016-02 [<a href="https://wiki.debian.org/LTS" rel="nofollow">2</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>12.04 precise</td>
-<td>2.6.2</td>
-<td>2.3.4</td>
-<td>2017-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>15.04 vivid</td>
-<td>2.4.1</td>
-<td>2.3.4</td>
-<td>2016-01 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>15.10 wily</td>
-<td>2.4.10</td>
-<td>2.3.4</td>
-<td>2016-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>16.10 yakkety</td>
-<td>2.7.1</td>
-<td>2.4.2</td>
-<td>2017-06 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Ubuntu</td>
-<td>17.04 zesty</td>
-<td>2.5.1</td>
-<td>2.8.1</td>
-<td>2017-12 [<a href="https://www.ubuntu.com/info/release-end-of-life" rel="nofollow">3</a>]</td>
-</tr>
-<tr>
-<td>Fedora</td>
-<td>25</td>
-<td>2.5.0</td>
-<td>2.8.0</td>
-<td>2017-12 [<a href="https://fedoraproject.org/wiki/Fedora_Release_Life_Cycle#Maintenance_Schedule" rel="nofollow">6</a>]</td>
-</tr>
-<tr>
-<td>openSUSE</td>
-<td>13.2</td>
-<td>2.6.3</td>
-<td>2.4.1</td>
-<td>2017-01 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
-</tr>
-<tr>
-<td>openSUSE</td>
-<td>42.1</td>
-<td>2.6.3</td>
-<td>2.4.1</td>
-<td>2017-05 [<a href="https://en.opensuse.org/Lifetime" rel="nofollow">5</a>]</td>
-</tr>
-<tr>
-<td>SUSE SLE</td>
-<td>12.2</td>
-<td>2.8.2</td>
-<td>2.5.1</td>
-<td>2018-03 [<a href="https://www.suse.com/lifecycle/" rel="nofollow">4</a>]</td>
-</tr>
-</tbody>
-</table>
-<h2>
-<a id="user-content-windows-support" class="anchor" href="#windows-support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows Support</h2>
-<p>Windows is only supported for Icinga 2 as a client/agent.</p>
-<p>Supported is:</p>
-<ul>
-<li>Windows Vista/Server 2008 or higher</li>
-<li>Microsoft .NET Framework 2.0 for the setup wizard</li>
-</ul>
-<p>Please see the <a href="https://www.icinga.com/docs/icinga2/latest/doc/06-distributed-monitoring/#client-setup-on-windows" rel="nofollow">Icinga 2 documentation on Windows</a>.</p>
+<a id="user-content-supported-platforms" class="anchor" href="#supported-platforms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Supported Platforms</h2>
+<p>The officially supported platforms are compiled on <a href="https://www.icinga.com/support/" rel="nofollow">icinga.com/support</a>.</p>
 <h2>
 <a id="user-content-contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
-<p>You can find our packaging files and scripts on <a href="https://github.com/Icinga">Icinga GitHub</a>.</p>
-<p>If you experience any issues with the packages themselves, please report an issue against <a href="https://github.com/icinga/icinga-packaging">icinga-packaging</a>.</p>
-<p>Other problems regarding the products can be reported on GitHub as well:</p>
+<p>Package build files and scripts are published on <a href="https://github.com/Icinga">Icinga GitHub</a>.</p>
+<p>If you experience issues with the package installation process, please
+create a issue at <a href="https://github.com/icinga/icinga-packaging">icinga-packaging</a>.</p>
+<p>Specific problems for products should be reported in their GitHub
+repository:</p>
 <ul>
 <li><a href="https://github.com/icinga/icinga2">Icinga 2</a></li>
 <li><a href="https://github.com/icinga/icingaweb2">Icinga Web 2</a></li>
