README: Update link to support matrix

--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 <div class="markdown-body">
 <ol>
 <li><a href="#user-content-documentation">Documentation</a></li>
-<li><a href="#user-content-linux-support">Supported Platforms</a></li>
+<li><a href="#user-content-supported-platforms">Supported Platforms</a></li>
 <li><a href="#user-content-contributing">Contributing</a></li>
 </ol>
 <h2>
@@ -16,7 +16,7 @@ and package setup instructions:</p>
 </ul>
 <h2>
 <a id="user-content-supported-platforms" class="anchor" href="#supported-platforms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Supported Platforms</h2>
-<p>The officially supported platforms are compiled on <a href="https://www.icinga.com/support/" rel="nofollow">icinga.com/support</a>.</p>
+<p>The officially supported platforms are compiled on <a href="https://icinga.com/support/support-details/" rel="nofollow">icinga.com</a>.</p>
 <h2>
 <a id="user-content-contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
 <p>Package build files and scripts are published on <a href="https://github.com/Icinga">Icinga GitHub</a>.</p>
